<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="teamprogra.app.socialize.socialize.LoginActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:text="@string/textView_titleLoginActivity"
        android:textSize="20sp"
        android:fontFamily="serif-monospace"
        android:textColor="@color/colorWhite"
        android:id="@+id/textView_titleActivity"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:id="@+id/imageView_userImage"
        android:layout_below="@+id/textView_titleActivity"
        android:layout_marginTop="36dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/login_user" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:id="@+id/editText_ingresarUsuario"
        android:layout_below="@+id/imageView_userImage"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="38dp"
        android:backgroundTint="@color/colorAccent"
        android:hint="@string/editText_ingresarUsuario"
        android:gravity="center"
        android:textSize="25sp"
        android:fontFamily="serif"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editText_ingresarContraseña"
        android:hint="@string/editText_ingresarContraseña"
        android:gravity="center"
        android:textSize="25sp"
        android:fontFamily="serif"
        android:backgroundTint="@color/colorAccent"
        android:layout_below="@+id/editText_ingresarUsuario"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="80dp"
        android:layout_marginTop="10dp"
        android:text="@string/button_login"
        android:textSize="20sp"
        android:textColor="@color/colorWhite"
        android:id="@+id/button_login"
        android:layout_below="@+id/editText_ingresarContraseña"
        android:layout_centerHorizontal="true"
        android:background="@color/colorRed"
        android:onClick="doLogin"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textView_infoRegistrarse"
        android:textSize="20sp"
        android:textColor="@color/colorWhite"
        android:id="@+id/textView_infoRegistrarse"
        android:layout_below="@id/button_login"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:gravity="center"/>
</RelativeLayout>
